# Facenet-rs

./: .gitignore  Cargo.toml
example/: Cargo.toml
example/src/: main.rs
src/: configs.rs  detection.rs  errors.rs  lib.rs  models.rs  recognition.rs  utils.rs
